--- a/geonode/documents/templates/documents/document_metadata.html
+++ b/geonode/documents/templates/documents/document_metadata.html
@@ -22,7 +22,7 @@
         {% trans "Editing details for" %} {{ document.title }}
     </p>
     <form class="form-horizontal" action="{% url "document_metadata" document.id %}" method="POST">
-      {% if document_form.errors or category_form.errors or author_form.errors or poc.errors %}
+      {% if document_form.errors or author_form.errors or poc.errors %}
         <p class="bg-danger">{% blocktrans %}Error updating metadata.  Please check the following fields: {% endblocktrans %}</p>
         <ul class="bg-danger">
         {% if author_form.errors %}
@@ -38,10 +38,6 @@
                 <li>{{ field.label }}</li>
             {% endif %}
         {% endfor %}
-
-        {% if category_form.errors %}
-            <li>{{ category_form.errors.as_ul }}</li>
-        {% endif %}
         </ul>
       {% endif %}
         <div class="form-actions">
@@ -60,23 +56,6 @@
         <h2>{% trans "Metadata Provider" %}</h2>
           {{ author_form|as_bootstrap }}
         <button type='button' class="modal-cloose-btn btn btn-primary">Done</button>
-      </fieldset>
-      <fieldset id="category_form">
-        <label class="control-label required-field">{% trans "Category" %}</label><br/>
-        {% autoescape off %}
-        <div style="clear:both;padding-left:175px;">
-        {% for choice in category_form.category_choice_field.field.choices %}
-          <div style="width:50%;float:left;padding-bottom:5px;">
-            <input type="radio" name="category_choice_field" value="{{ choice.0 }}"
-            {% ifequal category_form.initial choice.0 %}
-              checked="checked"
-            {% endifequal %}> 
-            {{ choice.1 }}
-            </input>
-          </div>
-          {% endfor %}
-        </div>
-        {% endautoescape %}
       </fieldset>
       <div class="form-actions">
         <input type="submit" class="btn btn-primary" value="{% trans "Update" %}"/>
