--- a/src/geonode-client/app/static/externals/ext/resources/css/xtheme-white.css
+++ b/src/geonode-client/app/static/externals/ext/resources/css/xtheme-white.css
@@ -245,7 +245,8 @@ ul.x-tab-strip-bottom{
 }
 
 .x-trigger-wrap-focus .x-form-trigger{
-    border-bottom-color: #777777;
+  /*  border-bottom-color: #777777;*/
+    border-bottom: 1px solid #fff;
 }
 
 .x-item-disabled .x-form-trigger-over{
@@ -303,7 +304,7 @@ ul.x-tab-strip-bottom{
 }
 
 .x-form-invalid-icon {
-    background-image:url(../images/white/form/exclamation.gif);
+    background-image:url(../images/white/form/exclamation.png);
 }
 
 .x-fieldset {
@@ -329,10 +330,15 @@ ul.x-tab-strip-bottom{
 
 .x-btn .icon-adduser {
     background-image: url(../images/white/silk/add.png);
-} 
+}
 
 .x-btn .gxp-icon-addlayers, .x-menu-item .gxp-icon-addlayers, .x-tree-node .gxp-icon-addlayers {
     background-image: url(../images/white/silk/add.png);
+}
+
+.x-btn .icon-removeuser {
+    background-image: url(../images/white/silk/delete.png);
+    border: 1px solid #fff;
 }
 
 .x-btn em {
@@ -341,11 +347,12 @@ ul.x-tab-strip-bottom{
 }
 
 .x-btn-tl, .x-btn-tr, .x-btn-tc, .x-btn-ml, .x-btn-mr, .x-btn-mc, .x-btn-bl, .x-btn-br, .x-btn-bc{
-	background-image:url(../images/white/button/btn.gif);
+	/*background-image:url(../images/white/button/btn.gif);*/
 }
 
 .x-btn-click .x-btn-text, .x-btn-menu-active .x-btn-text, .x-btn-pressed .x-btn-text{
     color:#000;
+    background-color: #bbb;
 }
 
 .x-btn-disabled *{
@@ -423,7 +430,7 @@ ul.x-tab-strip-bottom{
 
 .x-toolbar td,.x-toolbar span,.x-toolbar input,.x-toolbar div,.x-toolbar select,.x-toolbar label{
     font:normal 10px arial,tahoma, helvetica, sans-serif;
-    padding-left: 5px;
+    padding-left: 0px; /*5px;*/
 }
 
 .x-toolbar .x-item-disabled {
@@ -733,7 +740,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 }
 
 .x-grid3-body .x-grid3-td-checker {
-    background-image: url(../images/white/grid/grid3-special-col-bg.gif);
+    background-image: none;
 }
 
 .x-grid3-row-checker, .x-grid3-hd-checker {
@@ -755,7 +762,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 .x-grid3-body .x-grid3-row-selected .x-grid3-td-numberer,
 .x-grid3-body .x-grid3-row-selected .x-grid3-td-checker,
 .x-grid3-body .x-grid3-row-selected .x-grid3-td-expander {
-	background-image:url(../images/white/grid/grid3-special-col-sel-bg.gif);
+	background-image:none;
 }
 
 .x-grid3-check-col {
@@ -1221,7 +1228,7 @@ a.x-menu-item {
 }
 
 .x-menu-check-item .x-menu-item-icon{
-	background-image:url(../images/white/menu/unchecked.gif);
+	background-image:url(../images/white/menu/unchecked.png);
 }
 
 .x-menu-item-checked .x-menu-item-icon{
@@ -1395,30 +1402,31 @@ a.x-menu-item {
 }
 
 .x-panel-tc {
-	background-image: url(../images/white/panel/top-bottom.gif);
+	background-image: none ;
 }
 
 .x-panel-tl, .x-panel-tr, .x-panel-bl,  .x-panel-br{
-	background-image: url(../images/white/panel/corners-sprite.gif);
-    border-bottom-color:#d0d0d0;
+	  background-image: none;
+    border: none;
 }
 
 .x-panel-bc {
-	background-image: url(../images/white/panel/top-bottom.gif);
+	background-image: none;
 }
 
 .x-panel-mc {
     font: normal 11px tahoma,arial,helvetica,sans-serif;
-    background-color:#f1f1f1;
+    border-radius: 2px;
+    background-color:#ebebeb;
 }
 
 .x-panel-ml {
 	background-color: #fff;
-    background-image:url(../images/white/panel/left-right.gif);
+    background-image:none;
 }
 
 .x-panel-mr {
-	background-image: url(../images/white/panel/left-right.gif);
+	background-image: none;
 }
 
 .x-tool {
@@ -2113,7 +2121,7 @@ ul.x-tab-strip-top {
 
 .x-toolbar .x-btn-click .x-btn-bc, .x-toolbar .x-btn-menu-active .x-btn-bc, .x-toolbar .x-btn-pressed .x-btn-bc,  .x-toolbar .x-btn-over .x-btn-bc {
     background-image: none;
-    background-color: #808080;
+    background-color:#fff; /* #808080*/
 }
 
 .x-btn-text-icon .x-btn-icon-small-left .x-btn-text {
@@ -2124,7 +2132,11 @@ ul.x-tab-strip-top {
 }
 
 .x-btn-icon .x-btn-small .x-btn-text {
-    height: 25px;
+    /*height: 25px;*/
+}
+
+.x-btn .delete {
+    background-image: url("../images/white/silk/delete.png")
 }
 
 .x-tree-node .x-tree-selected {
