--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -116,6 +116,7 @@
             </ul>
         </nobr> 
         
+        <!-- SRS Selection commented out
         <nobr>
         <label class="label-dataclass">SRS</label>
         <select>
@@ -135,6 +136,7 @@
              {% endfor %}
         </select>
         </nobr> 
+        -->
         <br/>
      <input type="text" id="georef_area" name="georef_area" style="display:none" />
      <input type="submit" id="georef_submit" name="georef_submit" value="Submit" class="btn btn-default" />
