moved SRS selection from maptiles to cart

--- a/geonode/eula/templates/eula_form.html
+++ b/geonode/eula/templates/eula_form.html
@@ -6,7 +6,7 @@
 
 {% block body_outer %}
     {% show_eula %}
-    <form name="form_eula" action={% target_url %} onsubmit="return checkForm(this);" method="POST">
+    <form id="form_eula" name="form_eula" action={% target_url %} onsubmit="return checkForm(this);" method="POST">
         {% csrf_token %}
         
         <hr/>
