--- a/geonode/eula/templates/eula_dialog.html
+++ b/geonode/eula/templates/eula_dialog.html
@@ -20,7 +20,7 @@
           </div>
             
           <div class="modal-footer">
-            <form name="form_eula" action="{{target_url}}" method="POST">
+            <form id="form_eula" name="form_eula" action="{{target_url}}" method="POST">
                 {% csrf_token %}
                 <ul class="list-inline pull-right" align="right">
                     <input type="checkbox" id="signed" required name="signed"> I accept the <b><u>End User License Agreement</u></b></p>
