--- a/geonode/people/templates/people/profile_detail.html
+++ b/geonode/people/templates/people/profile_detail.html
@@ -84,7 +84,7 @@
       <ul class="list-group">
         <li class="list-group-item"><a href="{% url "profile_edit" user.username %}"><i class="fa fa-edit"></i> {% trans "Edit profile" %}</a></li>
       <!--  <li class="list-group-item"><a href="{% url "account_password"%}"><i class="fa fa-lock"></i> {% trans "Change password" %}</a></li> -->
-      <li class="list-group-item"><a href="https://ssp.dream.upd.edu.ph/"><i class="fa fa-lock"></i> {% trans "Change password" %}</a></li>
+      <li class="list-group-item"><a href="{% url 'ssplink' username %}"><i class="fa fa-lock"></i> {% trans "Change password" %}</a></li>
       </ul>
       <ul class="list-group">
         <li class="list-group-item"><a href="{% url "layer_upload" %}"><i class="fa fa-cloud-upload"></i> {% trans "Upload new layers" %}</a></li>
