--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -171,7 +171,7 @@
         </li>
 
         <div class="modal fade" id="approve-request" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <form method="post" class="modal-form" action='{% url "datarequests:data_request_profile_approve" pk=request_profile.pk%}'>{% csrf_token %}
+          <form id="approve_form" method="post" class="modal-form" action='{% url "datarequests:data_request_profile_approve" pk=request_profile.pk%}'>{% csrf_token %}
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
@@ -304,8 +304,10 @@
           });
 
           $("#approve_request_submit").click(function(e){
+              e.preventDefault();
               $(this).attr("disabled", true);
               $("#approve_request_cancel").attr("disabled", true);
+              $('#approve_form').submit();
           });
 
           $("#reject-request").on('hidden.bs.modal', function (e) {
