--- a/geonode/templates/site_base.html
+++ b/geonode/templates/site_base.html
@@ -2,4 +2,5 @@
 {% block extra_head %}
 	<link href="{{ STATIC_URL }}/geonode/css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="{{ STATIC_URL }}/geonode/css/site_base.css" rel="stylesheet"/>
+	<link href="{{STATIC_URL}}/geonode/css/featured-layer.css" rel="stylesheet" type="text/css"/>
 {% endblock %}
