--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -317,6 +317,7 @@
                     password += possible.charAt(Math.floor(Math.random() * 16));
                 }
                 $("#password-input").value = password;
+                $("#password-input").text = password;
           }
       </script>
 
