--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -318,6 +318,7 @@
                 }
                 $("#password-input").value = password;
                 $("#password-input").text = password;
+                console.log(password);
           };
       </script>
 
