--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -314,11 +314,10 @@
                 var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
                 var password = '';
                 for (var i=0;i<16;i++){
-                    password += possible.charAt(Math.floor(Math.random() * 16));
+                    password += possible.charAt(Math.floor(Math.random() * possible.length));
                 }
                 $("#password-input").value = password;
                 $("#password-input").text = password;
-                console.log(password);
           });
       </script>
 
