--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -325,7 +325,7 @@
           });
           
           $("#username-input").keyup(function(){
-              $("#ftp-directory-input").val("Others/"+$(this).val)
+              $("#ftp-directory-input").val("Others/"+$(this).val())
           });
       </script>
 
